# hunter

./: .gitignore
cmake/configs/: default.cmake
cmake/find/: FindARToolkit.cmake  FindAruco.cmake  FindAsio.cmake  FindAtlas.cmake  FindAvahi.cmake  FindBison.cmake  FindBoost.cmake  FindCXX11.cmake  FindCZMQ.cmake  FindCabal.cmake  FindCaffe.cmake  FindCapnProto.cmake  FindCppNetlib.cmake  FindCppRest.cmake  FindCppcheck.cmake  FindCurl.cmake  FindEnchant.cmake  FindEtcdcpp.cmake  FindFlann.cmake  FindFlawfinder.cmake  FindFlowVR.cmake  FindFlyCapture2.cmake  FindFreenect.cmake  FindG2O.cmake  FindGDB.cmake  FindGHC.cmake  FindGLM.cmake  FindGStreamer.cmake  FindGTK.cmake  FindGTKmm.cmake  FindGbc.cmake  FindGettext.cmake  FindGlib.cmake  FindGoogleCpplint.cmake  FindHDF5.cmake  FindHDF5_Apple.cmake  FindHunspell.cmake  FindIDN.cmake  FindJPEG.cmake  FindLMDB.cmake  (+75 more)
cmake/modules/: hunter_autotools_project.cmake  hunter_determine_go_compiler.cmake  hunter_go_compiler.cmake.in  hunter_go_information.cmake  hunter_libcurl_install_tools.cmake
cmake/projects/4DFace/: hunter.cmake
cmake/projects/ARToolKit5/: hunter.cmake
cmake/projects/AngelScript/: hunter.cmake
cmake/projects/Annoy/: hunter.cmake
cmake/projects/Aruco/: hunter.cmake
cmake/projects/Autobahn-cpp/: hunter.config
cmake/projects/Box2D/: hunter.cmake
cmake/projects/Bullet/: hunter.cmake
cmake/projects/CLM/: hunter.cmake
cmake/projects/CURL/: hunter.cmake
cmake/projects/Chipmunk2D/: hunter.cmake
cmake/projects/Cinder/: hunter.cmake
cmake/projects/Civetweb/: hunter.cmake
cmake/projects/CocosAR/: hunter.cmake
cmake/projects/Cordova/: hunter.cmake
cmake/projects/CppNetlib/: hunter.cmake
cmake/projects/CppNetlibUri/: hunter.cmake
cmake/projects/CryEngine/: hunter.cmake
cmake/projects/Cryptopp/: hunter.cmake
cmake/projects/Detour/: hunter.cmake
cmake/projects/DetourCrowd/: hunter.cmake
cmake/projects/DetourTileCache/: hunter.cmake
cmake/projects/Dill/: hunter.cmake
cmake/projects/DillSocks/: hunter.cmake
cmake/projects/Find-Object/: hunter.cmake
cmake/projects/FindObject/: hunter.cmake
cmake/projects/FreeImage/: hunter.cmake
cmake/projects/GLEW/: hunter.cmake
cmake/projects/GPUImage/: hunter.cmake
cmake/projects/GPUImage-Plus-Android/: hunter.cmake
cmake/projects/GPUImage-Plus-iOS/: hunter.cmake
cmake/projects/GTest/: hunter.cmake
cmake/projects/GamePlay/: hunter.cmake
cmake/projects/GamePlay-deps/: hunter.cmake
cmake/projects/Golang/: hunter.cmake
cmake/projects/GoogleCloudVision/: hunter.cmake
cmake/projects/JO/: hunter.cmake
cmake/projects/JsonSpirit/: hunter.cmake
cmake/projects/LZ4/: hunter.cmake
cmake/projects/Leathers/: hunter.cmake
cmake/projects/Lepton/: hunter.cmake
cmake/projects/LibCCV/: hunter.cmake
cmake/projects/LibCpuId/: hunter.cmake
cmake/projects/LibDill/: hunter.cmake
cmake/projects/LibEvent/: hunter.cmake
cmake/projects/LibMill/: hunter.cmake
cmake/projects/Mill/: hunter.cmake
cmake/projects/MojoShader/: hunter.cmake
cmake/projects/Mustache/: hunter.cmake
cmake/projects/NNMill/: hunter.cmake
cmake/projects/NanoMsg/: hunter.cmake
cmake/projects/OpenCV/: hunter.cmake
cmake/projects/OpenCV-Extra/: hunter.cmake
cmake/projects/OpenFace/: hunter.cmake
cmake/projects/OpenFrameworks/: hunter.cmake
cmake/projects/OpenMP/: hunter.cmake
cmake/projects/PNG/: hunter.cmake
cmake/projects/Pangolin/: hunter.cmake
cmake/projects/Poco/: hunter.cmake
cmake/projects/PocoCpp/: hunter.cmake
cmake/projects/PolAR/: hunter.cmake
cmake/projects/Protobuf/: hunter.cmake
cmake/projects/PugiXml/: hunter.cmake
cmake/projects/RapidJSON/: hunter.cmake
cmake/projects/Recast/: hunter.cmake
cmake/projects/SDL2/: hunter.cmake
cmake/projects/SQLite/: hunter.cmake
cmake/projects/STB/: hunter.cmake
cmake/projects/STXXL/: hunter.cmake
cmake/projects/Sober/: hunter.cmake
cmake/projects/StanHull/: hunter.cmake
cmake/projects/Sugar/: hunter.cmake
cmake/projects/Tess2/: hunter.cmake
cmake/projects/Thrift/: hunter.cmake
cmake/projects/Thrift-Asio/: hunter.cmake
cmake/projects/Thrift-Facebook/: hunter.cmake
cmake/projects/Urho3D/: hunter.cmake
cmake/projects/Vorbis/: hunter.cmake
cmake/projects/Yarrar/: hunter.cmake
cmake/projects/assimp/: hunter.cmake
cmake/projects/caffe/: hunter.cmake
cmake/projects/caffe-beniz/: hunter.cmake
cmake/projects/caffe2/: hunter.cmake
cmake/projects/ccv/: hunter.cmake
cmake/projects/clipper/: hunter.cmake
cmake/projects/cocos2d-x/: hunter.cmake
cmake/projects/convertutf/: hunter.cmake
cmake/projects/cordova-plugin-vuforia/: hunter.cmake
cmake/projects/cpp-restify/: hunter.cmake
cmake/projects/curlpp/: hunter.cmake
cmake/projects/deepdetect/: hunter.cmake
cmake/projects/dest/: hunter.cmake
cmake/projects/dlib/: hunter.cmake
cmake/projects/dlib-opencv/: hunter.cmake
cmake/projects/eos/: hunter.cmake
cmake/projects/flatbuffers/: hunter.cmake
cmake/projects/fontconfig/: hunter.cmake
cmake/projects/freetype/: hunter.cmake
cmake/projects/glfw/: hunter.cmake
cmake/projects/glog/: hunter.cmake
cmake/projects/gst-plugins-bad/: hunter.cmake
cmake/projects/gst-plugins-base/: hunter.cmake
cmake/projects/gst-plugins-good/: hunter.cmake
cmake/projects/gstreamer/: hunter.cmake
cmake/projects/gtk/: hunter.cmake
cmake/projects/inpaint/: hunter.cmake
cmake/projects/irrXML/: hunter.cmake
cmake/projects/jpeg-turbo/: hunter.cmake
cmake/projects/kNet/: hunter.cmake
cmake/projects/leptonica/: hunter.cmake
cmake/projects/libogg/: hunter.cmake
cmake/projects/libwebrtc/: hunter.cmake
cmake/schemes/: url_sha1_cordova.cmake.in
examples/FindObject-app/: CMakeLists.txt
examples/OpenCV/: CMakeLists.txt
examples/__scripts/: all.sh  build-android.sh  build-ios-9-1-arm64.sh  build-ios-9-2-arm64.sh  build-ios-9-3-arm64.sh  build-ios.sh  build-libcxx.sh  build-xcode.sh  common.sh
examples/golang/: CMakeLists.txt  main.go
scripts/: autotools-merge-lipo.cmake.in  create-toolchain-info.cmake  make2cmake.py  qmake2cmake.py
(+45 files in other folders)
